plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
}

application {
    mainClass = 'logic.persistence.InitDatabase'
    applicationDefaultJvmArgs = [
            "--add-modules=javafx.controls,javafx.fxml,javafx.graphics",
            "-Dprism.verbose=true"
    ]
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'ch.qos.logback:logback-classic:1.5.6'  // реализация SLF4J
}

tasks.withType(JavaExec) {
    jvmArgs = [
            "--module-path", classpath.asPath,
            "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
    ]
}